<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/i"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="121dp"
        android:text="@string/textview2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/p" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="42dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="118dp"
        app:srcCompat="@drawable/f"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="183dp"
        android:fontFamily="@font/ubuntu_bold"
        android:insetTop="6dp"
        android:insetBottom="6dp"
        android:text="@string/button"
        app:iconTint="#FFFFFF" />

    <EditText
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="402dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="332dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="278dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/textview"
        android:textColor="#706A6A" />


</RelativeLayout>