<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/i"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="732dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-1dp"
        app:srcCompat="@drawable/p" />

    <Button
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/ubuntu_bold"
        android:insetTop="6dp"
        android:insetBottom="6dp"
        android:text="@string/button2"
        app:iconTint="#FFFFFF" />

    <EditText
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="278dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="161dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="221dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="102dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="...."
        android:inputType="textPassword" />


</RelativeLayout>